<resources>
    <string name="app_name">Codenames</string>
    <string name="play">Play</string>
    <string name="online">Online</string>
    <string name="local">Local</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="are_you_sure_you_want_to_quit">Are you sure you\n want to quit?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="text_to_speech">Text-to-Speech</string>
    <string name="text_to_speech_btn">Text-to-\n Speech</string>
    <string name="vibration">Vibration</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="music">Music</string>
    <string name="colour_options">Colour Options</string>
    <string name="colours">Colours</string>
    <string name="exit">Exit</string>
    <string name="confirm">Confirm</string>
    <string name="scoreBorder">|</string>
    <string name="hide_hints">Hide Hints</string>
    <string name="previous_hints">Previous\n Hints</string>
    <string name="enter_hint">Enter hint..</string>
    <string name="give_hint">Give Hint</string>
    <string name="spymaster_confirmation">Ensure that only the spymasters can see the screen before proceeding.</string>
    <string name="ok">OK</string>
    <string name="team_a_win">Congratulations Team A! You won!</string>
    <string name="team_b_win">Congratulations Team B! You won!</string>
    <string name="team_a_loss">Sorry Team A. You lost this game.</string>
    <string name="team_b_loss">Sorry Team B. You lost this game.</string>
    <string name="invalid_hint">Invalid hint.\n Hint must be a single alphabetical word, 3 to 12 characters in length.\n It also cannot contain any word on the board.</string>
    <string name="end_turn">End turn</string>
    <string name="exit_confirm">Are you sure you want to exit the game?</string>
    <string name="game_options">Game Options</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join Game</string>
    <string name="server">Server:</string>
    <string name="nickname">Nickname:</string>
    <string name="enter_nickname">Enter nickname..</string>
    <string name="enter_server">Enter server..</string>
    <string name="unable_server">Unable to connect to server.</string>
    <string name="connecting_server">Connecting to server…</string>
    <string name="custom_words">Custom Words:</string>
    <string name="menu_text">Menu\n Text</string>
    <string name="menu_buttons">Menu\n Buttons</string>
    <string name="application_background">Application\n Background</string>
    <string name="unmodified_square">Unmodified\n Square</string>
    <string name="team_b">Team B</string>
    <string name="bomb_square">Bomb\n Square</string>
    <string name="neutral_square">Neutral\n Square</string>
    <string name="team_a">Team A</string>
    <string name="welcome_to_codenames">Welcome to Codenames!</string>
    <string name="tts_info">This application features text-to-speech to assist those who may find it difficult to read elements in the app.\n It is triggered by performing a held press on any text.\n If you do not wish to have this feature, you can disable it with the switch below.</string>
    <string name="continue_btn">Continue</string>
    <string name="how_to_play">How to\n Play</string>
    <string name="how_to_play_title">How to Play</string>
    <string name="teams">Teams</string>
    <string name="spymaster">Spymaster</string>
    <string name="hints">Hints</string>
    <string name="guessing">Guessing</string>
    <string name="squares">Squares</string>
    <string name="playing">Playing</string>
    <string name="teams_help">Each team consists of a minimum of 2 players.\n\n One player per team must be the spymaster, whilst all other players will be guessers.\n\n Teams should be similarly balanced, so a team should have at most 1 player more than the other.</string>
    <string name="spymaster_help">As the spymaster, you are able to see what type every square on the board is, you must use this information to help your team select the words associated with your teams colour.\n\n You are only able to communicate with the rest of your team by a single word, followed by a number. This is your hint.\n\n The word part of your hint should relate to as many of your teams words as possible. So if \'Student\' and \'Exam\' were two of your words, you could give the hint \'University\'. The number is then how many words relate to the hint you\'ve given.\n\n You may also give the numbers \'0\' or infinite. 0 means that no words relate to the word hint you gave, and infinite allows your team to guess as many words as they want, with the cost of not knowing how many words relate to the current word hint.</string>
    <string name="hints_help">Not anything can be used as a hint. The most basic rule is that the hint must be a single alphabetical word. No numbers or symbols can be used as a hint.\n\n The hint may also not be a substring of any of the words on the board.\n\n For example, if \'Flashlight\' is on the board, you cannot give the hint \'Flash\'.\n\n The hint must also be at least 3 characters long, but 12 or under characters long.</string>
    <string name="guessing_help">For the non-spymasters, your job is to wait until the spymaster gives a hint, and then using that hint, guess what words on the board relate to that hint.\n\n The hint will contain a word and a number, the word is used to find relating words on the board and the number is how many words relate to the hint.\n\n For example, if you are given the hint \'Pirate, 2\', then you know that you have 2 words relating to the theme \'Pirate\'.\n\n The number given also influences how many words you are able to guess. You are able to guess 1 more word than the number given in the hint. However, if given infinite you can guess as many times as you want, but remember that guessing an incorrect word will end your turn.</string>
    <string name="squares_help">A board contains 25 different squares. A game with default rules will have 9 squares for Team A, 8 squares for Team B, 7 Neutral squares and 1 Bomb square.\n\n Clicking a square for your own team is fine, but clicking one for the opposing team will end your teams turn whilst also meaning that the other team has 1 less word to find.\n\n Clicking a neutral word, will simply end your teams turn.\n\n Clicking the bomb word will instantly end the game, and the team who clicked it will lose.</string>
    <string name="playing_help">Once each team has at least 2 members each, the game can begin. For a default game, Team A will start as they have 1 more word to guess than Team B. Team A\'s spymaster must give a hint, then the other members of Team A must guess their words. Their turn can be ended manually, or by finding all plus 1 of the words relating to their hint, or by selecting an incorrect word.\n\n Next comes Team B\'s turn, this will be identical to Team A\'s turn in structure, but relating to Team B instead.\n\n This will repeat back and forth until a winner is decided.\n\n To win the game, your team must successfully find all of the words for your team. You may also win by having the opposing team select the bomb word.</string>
    <string name="username">Username:</string>
    <string name="enter_username">Enter username..</string>
    <string name="password">Password..</string>
    <string name="room_name">Room name..</string>
    <string name="private_game">Private Game</string>
    <string name="bomb_squares">Bomb Squares: %1$d</string>
    <string name="neutral_squares">Neutral Squares: %1$d</string>
    <string name="team_a_squares">Team A Squares: %1$d</string>
    <string name="team_b_squares">Team B Squares: %1$d</string>
    <string name="starting_team">Starting Team: %1$s</string>
    <string name="alpha_username">Username must be alphanumeric.</string>
    <string name="no_username">You must have a username.</string>
    <string name="refresh">Refresh</string>
    <string name="public_room">Public Room</string>
    <string name="private_room">Private Room</string>
    <string name="join">Join</string>
    <string name="save">Save</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="team_options">Team Options</string>
    <string name="custom_words_str">Custom Words</string>
    <string name="board_options">Board Options</string>
    <string name="bomb_squares_str">Bomb Squares</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="team_a_squares_str">Team A Squares</string>
    <string name="squares_in_use">Squares in use</string>
    <string name="neutral_squares_str">Neutral Squares</string>
    <string name="square_counter">%1$d/25</string>
    <string name="team_b_squares_str">Team B Squares</string>
    <string name="starting_team_str">Starting team</string>
    <string name="exit_without_save">Are you sure you want\n to exit without\n saving your settings?</string>
    <string name="repeated_custom_word">Repeated custom word.</string>
    <string name="default_word_exists">%1$s already exists\n as a default word.</string>
    <string name="required_squares">You do not have the\n required number of\n squares assigned.</string>
    <string name="custom_word_alpha">%1$s must only contain letters.</string>
    <string name="out_of"> out of </string>
    <string name="open">&gt;\n&gt;\n&gt;</string>
    <string name="close">&lt;\n&lt;\n&lt;</string>
    <string name="close_str">Close</string>
    <string name="open_game_op">Open game operations</string>
    <string name="close_game_op">Close game operations</string>
    <string name="all_words">All\n Words</string>
    <string name="team_a_words">Team A\n words</string>
    <string name="team_b_words">Team B\n words</string>
    <string name="neutral_words">Neutral\n words</string>
    <string name="bomb_words">Bomb\n words</string>
    <string name="unmodified_words">Unmodified \n words</string>
    <string name="clicked_words">Clicked \n words</string>
    <string name="minimum_turn">You must click at least\n one word every turn.</string>
    <string name="team_a_new_hint">Team A new hint. %1$s</string>
    <string name="team_a_hint">Team A hint. %1$s</string>
    <string name="team_b_new_hint">Team B new hint. %1$s</string>
    <string name="team_b_hint">Team B hint. %1$s</string>
    <string name="remaining_words_a">Team A remaining words. %1$d</string>
    <string name="remaining_words_b">Team B remaining words. %1$d</string>
    <string name="none_found">None found.</string>
    <string name="loading">Loading…</string>
    <string name="join_a_team">Please select a team to join.</string>
    <string name="start_game">Start Game</string>
    <string name="request_spymaster">Request\nSpymaster</string>
    <string name="change_team">Change Team</string>
    <string name="view_teams">View Teams</string>
    <string name="chat">Chat</string>
    <string name="enter_message_hint">Enter message here..</string>
    <string name="send">Send</string>
    <string name="end_game">End Game</string>
    <string name="exit_online_host">Are you sure you want\n to end the game?</string>
    <string name="exit_online">Are you sure you want\n to quit the game?</string>
    <string name="spymaster_name">%1$s &#128065;</string>
    <string name="resume">Resume</string>
    <string name="existing_spymaster">Someone else is already\n the spymaster</string>
    <string name="team_b_member">Team B Member..</string>
    <string name="team_a_member">Team A Member..</string>
    <string name="team_b_spymaster">Team B Spymaster..</string>
    <string name="team_a_spymaster">Team A Spymaster..</string>
    <string name="set_up_teams">Set up teams</string>
    <string name="team_info">Add the spymaster and members of each team here.\n\nFor members, include a comma between each name.</string>
</resources>