<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/howToPlayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:fontFamily="@font/title_font"
        android:gravity="center_horizontal"
        android:text="@string/how_to_play_title"
        android:textSize="74sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:paddingTop="28dp"
        android:paddingBottom="28dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false"
            android:verticalScrollbarPosition="left">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/teamsHelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/teams"
                    android:textSize="30sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/spymasterHelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/spymaster"
                    android:textSize="30sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/hintsHelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hints"
                    android:textSize="30sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/guessHelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/guessing"
                    android:textSize="30sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/squaresHelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/squares"
                    android:textSize="30sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/playingHelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/playing"
                    android:textSize="30sp" />
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/helpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>